# spacey

./: Cargo.toml  LICENSE  README.md  TODO.md
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.cursor/plans/: js_engine_implementation_order_ecc492cc.plan.md
.cursor/rules/: async-parallel.mdc  commit-on-complete.mdc  documentation.mdc  git-flow.mdc  no-summaries.mdc  rust-style.mdc  test-coverage.mdc
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: bench.yml  benchmarks.yml  ci.yml  docs.yml  release.yml  test262.yml
crates/spacey-macros/: Cargo.toml
crates/spacey-macros/src/: async_utils.rs  builder.rs  collections.rs  control.rs  debug.rs  error.rs  format.rs  js.rs  lib.rs  testing.rs  types.rs
crates/spacey-node/: Cargo.toml  index.d.ts  index.js  package.json
crates/spacey-node/src/: error.rs  lib.rs  main.rs
crates/spacey-node/src/globals/: buffer.rs  console.rs  mod.rs  process.rs  timers.rs
crates/spacey-node/src/module_system/: cache.rs  esm.rs  loader.rs  mod.rs  require.rs  resolver.rs
crates/spacey-node/src/modules/: assert.rs  child_process.rs  crypto.rs  dns.rs  events.rs  fs.rs  http.rs  https.rs  mod.rs  net.rs  os.rs  path.rs  promises.rs  querystring.rs  stream.rs  string_decoder.rs  url.rs  util.rs  zlib.rs
crates/spacey-node/src/runtime/: event_loop.rs  mod.rs  node_runtime.rs
crates/spacey-node/src/typescript/: mod.rs
crates/spacey-npm/: Cargo.toml
crates/spacey-npm/src/: cache.rs  cli.rs  config.rs  downloader.rs  error.rs  installer.rs  integrity.rs  lockfile.rs  main.rs  package.rs  peer_deps.rs  registry.rs  resolver.rs  store.rs  toml_lock.rs
crates/spacey-npm/src/commands/: add.rs  audit.rs  cache.rs  ci.rs  config.rs  exec.rs  info.rs  init.rs  install.rs  link.rs  list.rs  mod.rs  outdated.rs  pack.rs  publish.rs  remove.rs  run.rs  search.rs  store.rs  test.rs  unlink.rs  update.rs  version.rs
crates/spacey-spidermonkey/: Cargo.toml
crates/spacey-spidermonkey/src/: async_engine.rs  lib.rs
crates/spacey-spidermonkey/src/ast/: mod.rs
crates/spacey-spidermonkey/src/builtins/: array.rs  boolean.rs  console.rs  date.rs  error.rs  function.rs  global.rs  math.rs  mod.rs  number.rs  object.rs  regexp.rs  string.rs
crates/spacey-spidermonkey/src/compiler/: bytecode.rs  codegen.rs  mod.rs
crates/spacey-spidermonkey/src/compiler/codegen/: expressions.rs  mod.rs  scope.rs  statements.rs  tests.rs
crates/spacey-spidermonkey/src/gc/: arena.rs  mod.rs  object.rs
crates/spacey-spidermonkey/src/lexer/: literals.rs  mod.rs  operators.rs  scanner.rs  token.rs
crates/spacey-spidermonkey/src/parser/: expressions.rs  mod.rs  parser.rs  statements.rs  typescript.rs
crates/spacey-spidermonkey/src/runtime/: context.rs  environment.rs  function.rs  mod.rs  object.rs  value.rs
crates/spacey-spidermonkey/src/vm/: comparison.rs  date_methods.rs  interpreter.rs  mod.rs  number_methods.rs  regexp_methods.rs  runtime_object.rs  string_methods.rs
crates/spacey-spidermonkey/tests/: es3_compliance_test.rs
docs/: ES3-IMPLEMENTATION-PLAN.md  README.md  TODO-ES3.md  TODO-ES5.md  TODO-TypeScript.md  package.json  pnpm-lock.yaml
docs/public/: 404.html  benchmarks.json  llms-full.txt  llms.txt  robots.txt  sitemap.xml
docs/specs/: es3-implementation.md
docs/src/: index.html  styles.css
docs/src/app/: app.html  app.routes.ts  app.ts
docs/src/app/pages/benchmarks/: benchmarks.css  benchmarks.html  benchmarks.ts
docs/src/app/pages/home/: home.html  home.ts
src/: main.rs  repl.rs
tests/: es3_compliance.js
website/: angular.json  package-lock.json
website/public/: benchmarks.json  llms.txt  robots.txt  sitemap.xml
website/src/app/: app.ts
website/src/app/pages/benchmarks/: benchmarks.css  benchmarks.html  benchmarks.ts
website/src/app/pages/home/: home.ts
