[package]
name = "spacey-npm"
version = "0.1.0"
edition = "2024"
authors = ["Pegasus Heavy Industries"]
description = "A fast, async, multithreaded NPM-compatible package manager"
license = "MIT"
repository = "https://github.com/PegasusHeavyIndustries/spacey"
keywords = ["npm", "package-manager", "javascript", "node"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "snpm"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4.4", features = ["derive", "env", "cargo"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallelism
rayon = "1.8"

# Async utilities
futures = "0.3"
async-channel = "2.1"

# Progress bars and terminal output
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"
owo-colors = "4.0"

# File system
walkdir = "2.4"
tempfile = "3.9"
tar = "0.4"
flate2 = "1.0"

# Hashing for integrity checks
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"

# Semver for version resolution
semver = { version = "1.0", features = ["serde"] }

# URL handling
url = "2.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Directory utilities
dirs = "5.0"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"

# System info
num_cpus = "1.16"

# URL encoding
urlencoding = "2.1"

# Bytes for HTTP responses
bytes = "1.5"

# Path manipulation
pathdiff = "0.2"

# TOML for snpm.toml lockfile
toml = "0.8"
toml_edit = "0.22"

# Date/time for lockfile timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

